Add flower rain animation and update countdown timer logic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 </head>
 <body>
 
+    <div class="flower-rain-container">
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+    </div>
+
 
     <nav>
         <input type="checkbox" id="check">
@@ -17,11 +32,6 @@
             <i class="fas fa-bars"></i>
         </label>
         <label class="logo">G&S</label>
-        <ul class="text">
-            <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
-            <li><a href="#stay" onclick="myFunction()">TRAVEL & STAY</a></li>
-            <li><a href="#registry" onclick="myFunction()">PROMISES</a></li>
-        </ul>
     </nav>
 
 
@@ -41,7 +51,7 @@
     </div>
 
 
-    <div class="home-img home-img-sm"></div>
+    <div class="home-img home-img-sm" id="home-img-sm"></div>
     <div class="timeline hz-margin reveal">
         <h2>Celebrating Our Love <br>
             With Those We Love
@@ -49,12 +59,12 @@
         <div class="timeline-container">
             <div class="timeline-img"></div>
             <div class="timings">
-                <h3>01.&nbsp &nbsp Ceremony</h3>
-                <div class="text">Friday, Oct. 20, 2023 <br>
-                    ITC Sonar Bangla, Kolkata</div>
-                <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Sunday, Oct. 22, 2023 <br>
-                    Poddar Vihar, Kolkata</div>
+                <h3>01.&nbsp &nbsp Ladies Sangeet</h3>
+                <div class="text">Saturday, Nov. 29, 2025 <br>
+                    Garhwal Bhawan, Naya Gaon</div>
+                <h3>02.&nbsp &nbsp Wedding Day</h3>
+                <div class="text">Sunday, Nov. 30, 2025 <br>
+                    R.A Farm, Naya Gaon</div>
             </div>
         </div>
     </div>
@@ -62,22 +72,6 @@
 
     <div class="v-reposition-container">
         <div class="h-reposition-container">
-
-
-            <div id="story" class="hz-margin">
-                <h3 class="reveal">Not Just an <br>
-                    Ordinary Love Story
-                </h3>
-                <p class="text reveal">We met on ferry. Not sure if the kids remember that one. His female housemates encouraged him to get on it - he wasn't keen, but one night we ended up chatting and the next day we met up at the Tellypara Ghat. We spent nine hours together by the river, and I bought him a cotton candy and he says that's how he knew I was the one.</p>
-            </div>
-
-
-            <div class="gallery hz-margin reveal">
-                <div class="gallery-img"></div>
-                <div class="gallery-img"></div>
-                <div class="gallery-img"></div>
-            </div>
-
 
             <div class="quote reveal">
                 <h1>“To the world you are one person, but to one person you are the world”.</h1>
@@ -89,56 +83,32 @@
 
 
             <div id="stay">
-                <h2 class="reveal">Travel and Stay</h2>
+                <h2 class="reveal">Location</h2>
                 <div class="stay-container reveal">
                     <div class="stay-item">
                         <h3>01. <br>
                             Getting There
                         </h3>
                         <div class="text">Easy-to-follow <br> directions to the venue</div>
-                        <div class="text links">MAP & DETAILS</div>
+
                     </div>
-                    <div class="stay-item">
-                        <h3>02. <br>
-                            Once You're There
-                        </h3>
-                        <div class="text">Some fun things to do in <br> the area</div>
-                        <div class="text links">OUR RECOMMENDATIONS</div>
+                    <div class="stay-item stay-item-map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.803270506021!2d76.80425387445753!3d30.7801004833438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff2bd1bb1cb85%3A0xa9db32ba5c8e81d1!2sR.A%20Farm!5e0!3m2!1sen!2sin!4v1760889670233!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <div class="stay-item">
-                        <h3>03. <br>
-                            Where to Stay
-                        </h3>
-                        <div class="text">Hotels and B&Bs <br> to check out</div>
-                        <div class="text links">LODGING OPTIONS</div>
-                    </div>
-                </div>
             </div>
-
-
-            <div id="registry">
-                <div class="registry-container reveal">
-                    <h3>Promises</h3>
-                    <div class="text">
-                        I will provide welfare and happiness for you and the children that we bear and you shall offer me food and help whenever it is required. Together, we will protect our children and home and stand as each other's strength and courage. I will put every other person secodary to you. You make my like complete and promise to respect you. God bless you, my best friend. I pray thee, may my presence fill our life with joy and prospers.
-                    </div>
-                    <button class="huge-btn text">BLESS US</button>
-                </div>
-                <div class="registry-img registry-img-lg" id="parallax2"></div>
-            </div>
-            <div class="registry-img registry-img-sm"></div>
-
 
             <div class="parting-message reveal">
                 <h1>Hope to See You!</h1>
+                <p class="text" style="text-align: center; margin: 20px auto; max-width: 600px;">
+                    Your presence at our wedding is the greatest gift of all. We are so excited to celebrate this special day with our favorite people.
+                </p>
             </div>
 
 
             <footer>
                 <h2>Give us a Call</h2>
-                <h2>Amandeep: 123-456-7890</h2>
-                <h2>Gurpreet: 123-456-7890</h2>
-                <div class="text">© 2023 for Aman and Gur. Made by <a href="https://twitter.com/NathArchak" class="text">@NathArchak</a></div>
+                <h2>Sumit: 123-456-7890</h2>
+                <h2>Shashi: 123-456-7890</h2>
             </footer>
 
             <!-- Back to Home Button -->
