Fix scrollToTop function parameter and enhance button visibility based on scroll position

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <i class="fas fa-arrow-up"></i>
             </button>
             <!-- Scroll to Down Button -->
-            <button id="scrollToDown" class="back-to-home-btn" onclick="scrollToTop(direction='down')" title="Back to Stay">
+            <button id="scrollToDown" class="back-to-home-btn" onclick="scrollToTop('down')" title="Back to Stay">
                 <i class="fas fa-arrow-down"></i>
             </button>
         </div>
