Add countdown banner and enhance flower rain animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
 </head>
 <body>
 
+    <div id="countdown-banner">
+        <div id="countdown-container">
+            <div class="countdown-el">
+                <p id="days">0</p>
+                <span>Days</span>
+            </div>
+            <div class="countdown-el">
+                <p id="hours">0</p>
+                <span>Hours</span>
+            </div>
+            <div class="countdown-el">
+                <p id="minutes">0</p>
+                <span>Mins</span>
+            </div>
+            <div class="countdown-el">
+                <p id="seconds">0</p>
+                <span>Secs</span>
+            </div>
+        </div>
+    </div>
     <div class="flower-rain-container">
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
         <div class="petal"></div>
         <div class="petal"></div>
         <div class="petal"></div>
@@ -74,8 +101,8 @@
         <div class="h-reposition-container">
 
             <div class="quote reveal">
-                <h1>“To the world you are one person, but to one person you are the world”.</h1>
-                <div class="author text">Anonymous</div>
+                <h1>"Once in a while, right in the middle of an ordinary life, love gives us a fairy tale."</h1>
+                <div class="author text">- Anonymous</div>
             </div>
 
 
