Update wedding quote to reflect the celebration of Gaurav & Shashi's union

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="h-reposition-container">
 
             <div class="quote reveal">
-                <h1>"Once in a while, right in the middle of an ordinary life, love gives us a fairy tale."</h1>
+                <h1>"As Gauri found her shankar, we too found our forver, Gaurav & Shashi join hands with Gauri & Shankar in Celebrating togetherness"</h1>
                 <div class="author text">- Anonymous</div>
             </div>
 
