Update wedding details and add hashtag styling for Gaurav & Shashi

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
 
 
     <div class="home hz-margin">
-        <h3>We'er getting married</h3>
-        <h1>Gaurav & Siya.</h1>
+        <h1>Gaurav ❤️ Shashi</h1>
+        <h3>tying the knot and hearts on November 30th.</h3>
+        <!-- <h1>Gaurav & Shashi.</h1> -->
+        <h2 class="hashtag hashtag-home">#GauravKiShashi</h2>
         <div class="container-out">
             
             <div class="container-in text">
@@ -129,6 +131,7 @@
                 <p class="text" style="text-align: center; margin: 20px auto; max-width: 600px;">
                     Your presence at our wedding is the greatest gift of all. We are so excited to celebrate this special day with our favorite people.
                 </p>
+                <h2 class="hashtag">#GauravKiShashi</h2>
             </div>
 
 
