Update wedding quote to reflect Gaurav & Siya's celebration

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="h-reposition-container">
 
             <div class="quote reveal">
-                <h1>"As Gauri found her shankar, we too found our forver, Gaurav & Shashi join hands with Gauri & Shankar in Celebrating togetherness"</h1>
+                <h1>"As Gauri found her shankar, we too found our forever, Gaurav & Siya join hands with Gauri & Shankar in Celebrating togetherness"</h1>
                 <div class="author text">- Anonymous</div>
             </div>
 
