Update event details for Gaurav & Siya's wedding, including Kirtan and revised contact information

--- a/index.html
+++ b/index.html
@@ -88,12 +88,21 @@
         <div class="timeline-container">
             <div class="timeline-img"></div>
             <div class="timings">
-                <h3>01.&nbsp &nbsp Ladies Sangeet</h3>
+                <h3>01.&nbsp &nbsp Kirtan</h3>
+                <div class="text">Friday, Nov. 28, 2025 <br>
+                    # 1609/1, Adarsh Nagar, Naya Gaon
+                <br> Timing : 2:00 PM
+                </div>
+                <h3>02.&nbsp &nbsp Ladies Sangeet</h3>
                 <div class="text">Saturday, Nov. 29, 2025 <br>
-                    Garhwal Bhawan, Naya Gaon</div>
-                <h3>02.&nbsp &nbsp Wedding Day</h3>
+                    Garhwal Bhawan, Naya Gaon
+                <br> Timing : 7:00 PM Onwards
+                </div>
+                <h3>03.&nbsp &nbsp Wedding Day</h3>
                 <div class="text">Sunday, Nov. 30, 2025 <br>
-                    R.A Farm, Naya Gaon</div>
+                    R.A Farm, Naya Gaon
+                <br> Timing : 7:00 PM Onwards
+                </div>
             </div>
         </div>
     </div>
@@ -137,8 +146,9 @@
 
             <footer>
                 <h2>Give us a Call</h2>
-                <h2>Sumit: 123-456-7890</h2>
-                <h2>Shashi: 123-456-7890</h2>
+                <h2>Gopal Chand Ramola: 9592554129</h2>
+                <h2>Sumit Singh: 7340964905</h2>
+                <h2>Shashi: 9888762903</h2>
             </footer>
 
             <!-- Back to Home Button -->
