Update wedding invite title and enhance location details with maps and animations

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/7b12bcc245.js" crossorigin="anonymous"></script>
-    <title>Wedding Invite</title>
+    <title>Wedding Invite #GauravKiSiya</title>
 </head>
 <body>
+    <div class = "fireWorkParticle"></div>
 
     <div id="countdown-banner">
         <div id="countdown-container">
@@ -123,15 +124,26 @@
             <div id="stay">
                 <h2 class="reveal">Location</h2>
                 <div class="stay-container reveal">
-                    <div class="stay-item">
-                        <h3>01. <br>
-                            Getting There
-                        </h3>
-                        <div class="text">Easy-to-follow <br> directions to the venue</div>
-
+                    <div class="stay-item stay-item-locations">
+                        <div class="location-detail">
+                            <h3>01. Kirtan Venue</h3>
+                            <div class="text"># 1609/1, Adarsh Nagar, Naya Gaon</div>
+                            <a href="https://www.google.com/maps/place/Adarsh+Nagar,+Naya+Gaon,+Punjab" target="_blank" class="links">View on Map</a>
+                        </div>
+                        <div class="location-detail">
+                            <h3>02. Ladies Sangeet</h3>
+                            <div class="text">Garhwal Bhawan, Naya Gaon</div>
+                            <a href="https://www.google.com/maps/place/Garhwal+Bhawan,+Naya+Gaon,+Punjab" target="_blank" class="links">View on Map</a>
+                        </div>
+                        <div class="location-detail">
+                            <h3>03. Wedding Venue</h3>
+                            <div class="text">R.A Farm, Naya Gaon, Mohali, Punjab</div>
+                            <a href="https://www.google.com/maps/place/R.A+Farm/@30.7801005,76.8042539,17z" target="_blank" class="links">View on Map</a>
+                        </div>
                     </div>
                     <div class="stay-item stay-item-map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.803270506021!2d76.80425387445753!3d30.7801004833438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff2bd1bb1cb85%3A0xa9db32ba5c8e81d1!2sR.A%20Farm!5e0!3m2!1sen!2sin!4v1760889670233!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <p class="text" style="margin-bottom: 10px; font-weight: bold;">Main Wedding Venue: R.A. Farm</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.803270506021!2d76.80425387445753!3d30.7801004833438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff2bd1bb1cb85%3A0xa9db32ba5c8e81d1!2sR.A%20Farm!5e0!3m2!1sen!2sin!4v1760889670233!5m2!1sen!2sin" width="100%" height="400" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
             </div>
 
