Add fireworks animation and styling to wedding invite

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Wedding Invite #GauravKiSiya</title>
 </head>
 <body>
-    <div class = "fireWorkParticle"></div>
+    <!-- Fireworks board (add once) -->
+<div id="board" aria-hidden="true"></div>
+
 
     <div id="countdown-banner">
         <div id="countdown-container">
