Enhance wedding invite with animated hero title and updated location details

--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
 
 
     <div class="home hz-margin">
-        <h1>Gaurav ❤️ Siya</h1>
+        <!-- <h1>Siya ❤️ Gaurav </h1> -->
+         <h1 class="hero-title">
+        <span class="name name-left">Gaurav</span>
+        <span class="heart" aria-hidden="true">❤️</span>
+        <span class="name name-right">Siya</span>
+        </h1>
+
         <h3>tying the knot and hearts on November 30th.</h3>
         <!-- <h1>Gaurav & Siya.</h1> -->
         <h2 class="hashtag hashtag-home">#GauravKiSiya</h2>
@@ -126,26 +132,29 @@
             <div id="stay">
                 <h2 class="reveal">Location</h2>
                 <div class="stay-container reveal">
-                    <div class="stay-item stay-item-locations">
-                        <div class="location-detail">
-                            <h3>01. Kirtan Venue</h3>
-                            <div class="text"># 1609/1, Adarsh Nagar, Naya Gaon</div>
-                            <a href="https://www.google.com/maps/place/Adarsh+Nagar,+Naya+Gaon,+Punjab" target="_blank" class="links">View on Map</a>
-                        </div>
-                        <div class="location-detail">
-                            <h3>02. Ladies Sangeet</h3>
-                            <div class="text">Garhwal Bhawan, Naya Gaon</div>
-                            <a href="https://www.google.com/maps/place/Garhwal+Bhawan,+Naya+Gaon,+Punjab" target="_blank" class="links">View on Map</a>
-                        </div>
-                        <div class="location-detail">
-                            <h3>03. Wedding Venue</h3>
-                            <div class="text">R.A Farm, Naya Gaon, Mohali, Punjab</div>
-                            <a href="https://www.google.com/maps/place/R.A+Farm/@30.7801005,76.8042539,17z" target="_blank" class="links">View on Map</a>
-                        </div>
+                    <div class="location-detail">
+                        <h3>01. Kirtan Venue</h3>
+                        <div class="text"># 1609/1, Adarsh Nagar, Naya Gaon</div>
+                        <a href="https://maps.app.goo.gl/JAFH2xCbEn2NEWwQ7" target="_blank" class="links">View on Map</a>
                     </div>
-                    <div class="stay-item stay-item-map">
-                        <p class="text" style="margin-bottom: 10px; font-weight: bold;">Main Wedding Venue: R.A. Farm</p>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.803270506021!2d76.80425387445753!3d30.7801004833438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff2bd1bb1cb85%3A0xa9db32ba5c8e81d1!2sR.A%20Farm!5e0!3m2!1sen!2sin!4v1760889670233!5m2!1sen!2sin" width="100%" height="400" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="map-wrapper">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d857.030038383878!2d76.78523776983641!3d30.771206999999983!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff346f2b953a3%3A0x92d7e72458775ea0!2sKamla%20house!5e0!3m2!1sen!2sin!4v1761045704380!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="location-detail">
+                        <h3>02. Ladies Sangeet</h3>
+                        <div class="text">Garhwal Bhawan, Naya Gaon</div>
+                        <a href="https://maps.app.goo.gl/8kkddzJCcExRprCx8" target="_blank" class="links">View on Map</a>
+                    </div>
+                    <div class="map-wrapper">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.9412471518153!2d76.78695857445732!3d30.776228383531222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff35c917b516d%3A0xf4da580c64183bfe!2sGarhwal%20Bhawan!5e0!3m2!1sen!2sin!4v1761045871017!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="location-detail">
+                        <h3>03. Wedding Venue</h3>
+                        <div class="text">R.A Farm, Naya Gaon, Mohali, Punjab</div>
+                        <a href="https://maps.app.goo.gl/9DWBxMw93oceWiM46" target="_blank" class="links">View on Map</a>
+                    </div>
+                    <div class="map-wrapper">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.803270506021!2d76.80425387445753!3d30.7801004833438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff2bd1bb1cb85%3A0xa9db32ba5c8e81d1!2sR.A%20Farm!5e0!3m2!1sen!2sin!4v1760889670233!5m2!1sen!2sin" width="100%" height="200" style="border:0; border-radius: 5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
             </div>
 
