Swap names in hero title for wedding invite

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
     <div class="home hz-margin">
         <!-- <h1>Siya ❤️ Gaurav </h1> -->
          <h1 class="hero-title">
-        <span class="name name-left">Gaurav</span>
+        <span class="name name-left">Siya</span>
         <span class="heart" aria-hidden="true">❤️</span>
-        <span class="name name-right">Siya</span>
+        <span class="name name-right">Gaurav</span>
         </h1>
 
         <h3>tying the knot and hearts on November 30th.</h3>
