--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <a href="https://maps.app.goo.gl/8kkddzJCcExRprCx8" target="_blank" class="links">View on Map</a>
                     </div>
                     <div class="map-wrapper">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.9412471518153!2d76.78695857445732!3d30.776228383531222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff35c917b516d%3A0xf4da580c64183bfe!2sGarhwal%20Bhawan!5e0!3m2!1sen!2sin!4v1761045871017!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3427.9412471518153!2d76.78695857445732!3d30.776228383531222!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ff35c917b516d%3A0xf4da580c64183bfe!2sGarhwal%20Bhawan!5e0!3m2!1sen!2sin!4v1761045871017!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="location-detail">
                         <h3>03. Wedding Venue</h3>
